SONARPY 1745b Update .collect(Collectors.toList()) to .toList()